--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -5,7 +5,7 @@
 	align-items: center;
 	text-align: center;
 	background: linear-gradient(to right, rgba($primary-color, 0.9), rgba($primary-color, 0.3)),
-		url('https://github.com/pr1thvicoder/portfolio-with-sass-demo/blob/main/dist/img/model-1.jpg?raw=true')
+		url('./dist/img/model-1')
 			no-repeat top;
 	background-size: cover;
 
