--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -5,7 +5,7 @@
 	align-items: center;
 	text-align: center;
 	background: linear-gradient(to right, rgba($primary-color, 0.9), rgba($primary-color, 0.3)),
-		url('dist/img/model-1.jpg')
+		url('/dist/model-1.jpg')
 			no-repeat top;
 	background-size: cover;
 
