--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -5,7 +5,7 @@
 	align-items: center;
 	text-align: center;
 	background: linear-gradient(to right, rgba($primary-color, 0.9), rgba($primary-color, 0.3)),
-		url('/dist/model-1.jpg')
+		url('https://images.unsplash.com/photo-1504791863696-778ed52d7ea3?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=869&q=80')
 			no-repeat top;
 	background-size: cover;
 
